# microbattle-bot

./: .gitignore  CMakeLists.txt  README.md  TODO  bot.py  burgerbot.py  config.json  demo4.py  firmware.c  firmware.uf2  index.css  index.html  index.js  lwipopts.h  pico_w_test.py  server.py  server_sim.py  set_ssid_password.py
